further refactorings
* switches
* code clean up